# ImgToASCII

./: CMakeLists.txt  LICENSE  gitignore
images/: output_ascii.txt
src/: Image.cpp  Image.h  main.cpp
